[package]
name = "rsdsl_dhcp4d"
version = "0.1.0"
authors = ["HimbeerserverDE <himbeerserverde@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = "0.8.0"
ipnet = "2.7.1"
libc = "0.2"
linkaddrs = { git = "https://github.com/HimbeerserverDE/linkaddrs.git", version = "0.1.0" }
rand = "0.8.5"
rsdsl_netlinkd = { git = "https://github.com/rsdsl/netlinkd.git", version = "0.1.1" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
socket2 = { version = "0.5.1", features = ["all"] }
thiserror = "1.0"
