[package]
name = "rsdsl_dhcp4d"
version = "0.2.5"
authors = ["HimbeerserverDE <himbeerserverde@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhcproto = "0.8.0"
ipnet = "2.7.1"
libc = "0.2"
rand = "0.8.5"
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", version = "0.4.5", default-features = false, features = ["addr", "blocking", "status"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
socket2 = { version = "0.5.1", features = ["all"] }
sysinfo = { version = "0.29.10", default-features = false }
thiserror = "1.0"
